css/style.css
body{
	background-color: white;
}

img{
	width:400px; 
	display: block; 
	margin-left: auto; 
	margin-right: auto;
}

iframe{
	border:none; 
	display: block; 
	margin-left: auto; 
	margin-right: auto; 
	margin-top: -704px;
	width: 352px;
	height: 625px;
}

#zoom{
	float:right;
	opacity: 0.1;
}

#zoom_up, #zoom_down{
	max-width: 45px;
}

